@@ -48,7 +48,6 @@ public class FractionsIntroCanvas extends AbstractFractionsCanvas {
         ResetAllButtonNode resetAllButtonNode = new ResetAllButtonNode( new Resettable() {
             public void reset() {
                 model.resetAll();
-                resetAll();
             }
         }, this, CONTROL_FONT, Color.black, Color.orange ) {{
             setConfirmationEnabled( false );
@@ -57,9 +56,5 @@ public class FractionsIntroCanvas extends AbstractFractionsCanvas {
 
         optionsControlPanel.setOffset( STAGE_SIZE.width - optionsControlPanel.getFullBounds().getWidth() - INSET, STAGE_SIZE.height - resetAllButtonNode.getFullBounds().getHeight() - INSET - optionsControlPanel.getFullBounds().getHeight() - INSET );
         resetAllButtonNode.setOffset( optionsControlPanel.getFullBounds().getCenterX() - resetAllButtonNode.getFullBounds().getWidth() / 2, STAGE_SIZE.height - resetAllButtonNode.getFullBounds().getHeight() - INSET );
-    }
-
-    private void resetAll() {
-
     }
 }
